--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -72,7 +73,7 @@
 
   </div>
 
-  </div>
+  <script src="main.js"></script>
 
 </body>
 
